# should

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yaml
src/: caller_name.rs  expected.rs  lib.rs
src/impls/: generic.rs  iterator.rs  mod.rs  numeric.rs  option.rs  result.rs  string.rs
src/tests/: generic.rs  iterator.rs  mod.rs  numeric.rs  option.rs  result.rs  should_be.rs  should_not_be.rs  string.rs
src/traits/: approx_equal.rs  contain.rs  empty.rs  eq.rs  equal.rs  mod.rs  option.rs  ord.rs  ordered.rs  result.rs  same.rs  start_end.rs
