[package]
catagories = ["development-tools::testing"]
description = "Postfix assertion library for Rust"
edition = "2021"
keywords = ["assert", "assertion", "shouldly", "test", "testing"]
license = "MIT"
name = "should"
readme = "README.md"
repository = "https://github.com/should-rs/should"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"